draco_trunk/llvm_c_api/core_h.ads


   function LLVMConstNUWAdd (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:582
   pragma Import (C, LLVMConstNUWAdd, "LLVMConstNUWAdd");

   function LLVMConstFAdd (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:583
   pragma Import (C, LLVMConstFAdd, "LLVMConstFAdd");

   function LLVMConstSub (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:584
   pragma Import (C, LLVMConstSub, "LLVMConstSub");

   function LLVMConstNSWSub (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:585
   pragma Import (C, LLVMConstNSWSub, "LLVMConstNSWSub");

   function LLVMConstNUWSub (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:586
   pragma Import (C, LLVMConstNUWSub, "LLVMConstNUWSub");

   function LLVMConstFSub (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:587
   pragma Import (C, LLVMConstFSub, "LLVMConstFSub");

   function LLVMConstMul (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:588
   pragma Import (C, LLVMConstMul, "LLVMConstMul");

   function LLVMConstNSWMul (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:589
   pragma Import (C, LLVMConstNSWMul, "LLVMConstNSWMul");

   function LLVMConstNUWMul (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:590
   pragma Import (C, LLVMConstNUWMul, "LLVMConstNUWMul");

   function LLVMConstFMul (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:591
   pragma Import (C, LLVMConstFMul, "LLVMConstFMul");

   function LLVMConstUDiv (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:592
   pragma Import (C, LLVMConstUDiv, "LLVMConstUDiv");

   function LLVMConstSDiv (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:593
   pragma Import (C, LLVMConstSDiv, "LLVMConstSDiv");

   function LLVMConstExactSDiv (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:594
   pragma Import (C, LLVMConstExactSDiv, "LLVMConstExactSDiv");

   function LLVMConstFDiv (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:595
   pragma Import (C, LLVMConstFDiv, "LLVMConstFDiv");

   function LLVMConstURem (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:596
   pragma Import (C, LLVMConstURem, "LLVMConstURem");

   function LLVMConstSRem (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:597
   pragma Import (C, LLVMConstSRem, "LLVMConstSRem");

   function LLVMConstFRem (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:598
   pragma Import (C, LLVMConstFRem, "LLVMConstFRem");

   function LLVMConstAnd (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:599
   pragma Import (C, LLVMConstAnd, "LLVMConstAnd");

   function LLVMConstOr (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:600
   pragma Import (C, LLVMConstOr, "LLVMConstOr");

   function LLVMConstXor (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:601
   pragma Import (C, LLVMConstXor, "LLVMConstXor");

   function LLVMConstICmp
     (arg1 : LLVMIntPredicate;
      arg2 : LLVMValueRef;
      arg3 : LLVMValueRef) return LLVMValueRef;  -- Core.h:602
   pragma Import (C, LLVMConstICmp, "LLVMConstICmp");

   function LLVMConstFCmp
     (arg1 : LLVMRealPredicate;
      arg2 : LLVMValueRef;
      arg3 : LLVMValueRef) return LLVMValueRef;  -- Core.h:604
   pragma Import (C, LLVMConstFCmp, "LLVMConstFCmp");

   function LLVMConstShl (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:606
   pragma Import (C, LLVMConstShl, "LLVMConstShl");

   function LLVMConstLShr (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:607
   pragma Import (C, LLVMConstLShr, "LLVMConstLShr");

   function LLVMConstAShr (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:608
   pragma Import (C, LLVMConstAShr, "LLVMConstAShr");

   function LLVMConstGEP
     (arg1 : LLVMValueRef;
      arg2 : System.Address;
      arg3 : unsigned) return LLVMValueRef;  -- Core.h:609
   pragma Import (C, LLVMConstGEP, "LLVMConstGEP");

   function LLVMConstInBoundsGEP
     (arg1 : LLVMValueRef;
      arg2 : System.Address;
      arg3 : unsigned) return LLVMValueRef;  -- Core.h:611
   pragma Import (C, LLVMConstInBoundsGEP, "LLVMConstInBoundsGEP");

   function LLVMConstTrunc (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:614
   pragma Import (C, LLVMConstTrunc, "LLVMConstTrunc");

   function LLVMConstSExt (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:615
   pragma Import (C, LLVMConstSExt, "LLVMConstSExt");

   function LLVMConstZExt (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:616
   pragma Import (C, LLVMConstZExt, "LLVMConstZExt");

   function LLVMConstFPTrunc (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:617
   pragma Import (C, LLVMConstFPTrunc, "LLVMConstFPTrunc");

   function LLVMConstFPExt (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:618
   pragma Import (C, LLVMConstFPExt, "LLVMConstFPExt");

   function LLVMConstUIToFP (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:619
   pragma Import (C, LLVMConstUIToFP, "LLVMConstUIToFP");

   function LLVMConstSIToFP (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:620
   pragma Import (C, LLVMConstSIToFP, "LLVMConstSIToFP");

   function LLVMConstFPToUI (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:621
   pragma Import (C, LLVMConstFPToUI, "LLVMConstFPToUI");

   function LLVMConstFPToSI (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:622
   pragma Import (C, LLVMConstFPToSI, "LLVMConstFPToSI");

   function LLVMConstPtrToInt (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:623
   pragma Import (C, LLVMConstPtrToInt, "LLVMConstPtrToInt");

   function LLVMConstIntToPtr (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:624
   pragma Import (C, LLVMConstIntToPtr, "LLVMConstIntToPtr");

   function LLVMConstBitCast (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:625
   pragma Import (C, LLVMConstBitCast, "LLVMConstBitCast");

   function LLVMConstZExtOrBitCast (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:626
   pragma Import (C, LLVMConstZExtOrBitCast, "LLVMConstZExtOrBitCast");

   function LLVMConstSExtOrBitCast (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:628
   pragma Import (C, LLVMConstSExtOrBitCast, "LLVMConstSExtOrBitCast");

   function LLVMConstTruncOrBitCast (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:630
   pragma Import (C, LLVMConstTruncOrBitCast, "LLVMConstTruncOrBitCast");

   function LLVMConstPointerCast (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:632
   pragma Import (C, LLVMConstPointerCast, "LLVMConstPointerCast");

   function LLVMConstIntCast
     (arg1 : LLVMValueRef;
      arg2 : LLVMTypeRef;
      arg3 : LLVMBool) return LLVMValueRef;  -- Core.h:634
   pragma Import (C, LLVMConstIntCast, "LLVMConstIntCast");

   function LLVMConstFPCast (arg1 : LLVMValueRef; arg2 : LLVMTypeRef) return LLVMValueRef;  -- Core.h:636
   pragma Import (C, LLVMConstFPCast, "LLVMConstFPCast");

   function LLVMConstSelect
     (arg1 : LLVMValueRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMValueRef) return LLVMValueRef;  -- Core.h:637
   pragma Import (C, LLVMConstSelect, "LLVMConstSelect");

   function LLVMConstExtractElement (arg1 : LLVMValueRef; arg2 : LLVMValueRef) return LLVMValueRef;  -- Core.h:640
   pragma Import (C, LLVMConstExtractElement, "LLVMConstExtractElement");

   function LLVMConstInsertElement
     (arg1 : LLVMValueRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMValueRef) return LLVMValueRef;  -- Core.h:642
   pragma Import (C, LLVMConstInsertElement, "LLVMConstInsertElement");

   function LLVMConstShuffleVector
     (arg1 : LLVMValueRef;
      arg2 : LLVMValueRef;
      arg3 : LLVMValueRef) return LLVMValueRef;  -- Core.h:645
   pragma Import (C, LLVMConstShuffleVector, "LLVMConstShuffleVector");

   function LLVMConstExtractValue
     (arg1 : LLVMValueRef;
      arg2 : access unsigned;
      arg3 : unsigned) return LLVMValueRef;  -- Core.h:648
   pragma Import (C, LLVMConstExtractValue, "LLVMConstExtractValue");

   function LLVMConstInsertValue
     (arg1 : LLVMValueRef;
      arg2 : LLVMValueRef;
      arg3 : access unsigned;
      arg4 : unsigned) return LLVMValueRef;  -- Core.h:650
   pragma Import (C, LLVMConstInsertValue, "LLVMConstInsertValue");

   function LLVMConstInlineAsm
     (arg1 : LLVMTypeRef;
      arg2 : Interfaces.C.Strings.chars_ptr;
      arg3 : Interfaces.C.Strings.chars_ptr;
      arg4 : LLVMBool;
      arg5 : LLVMBool) return LLVMValueRef;  -- Core.h:653
   pragma Import (C, LLVMConstInlineAsm, "LLVMConstInlineAsm");

   function LLVMBlockAddress (arg1 : LLVMValueRef; arg2 : LLVMBasicBlockRef) return LLVMValueRef;  -- Core.h:656
   pragma Import (C, LLVMBlockAddress, "LLVMBlockAddress");

  -- Operations on global variables, functions, and aliases (globals)
   function LLVMGetGlobalParent (arg1 : LLVMValueRef) return LLVMModuleRef;  -- Core.h:659
   pragma Import (C, LLVMGetGlobalParent, "LLVMGetGlobalParent");

   function LLVMIsDeclaration (arg1 : LLVMValueRef) return LLVMBool;  -- Core.h:660
   pragma Import (C, LLVMIsDeclaration, "LLVMIsDeclaration");

   function LLVMGetLinkage (arg1 : LLVMValueRef) return LLVMLinkage;  -- Core.h:661
   pragma Import (C, LLVMGetLinkage, "LLVMGetLinkage");

   procedure LLVMSetLinkage (arg1 : LLVMValueRef; arg2 : LLVMLinkage);  -- Core.h:662
   pragma Import (C, LLVMSetLinkage, "LLVMSetLinkage");

   function LLVMGetSection (arg1 : LLVMValueRef) return Interfaces.C.Strings.chars_ptr;  -- Core.h:663
   pragma Import (C, LLVMGetSection, "LLVMGetSection");

   procedure LLVMSetSection (arg1 : LLVMValueRef; arg2 : Interfaces.C.Strings.chars_ptr);  -- Core.h:664
   pragma Import (C, LLVMSetSection, "LLVMSetSection");

   function LLVMGetVisibility (arg1 : LLVMValueRef) return LLVMVisibility;  -- Core.h:665
   pragma Import (C, LLVMGetVisibility, "LLVMGetVisibility");

   procedure LLVMSetVisibility (arg1 : LLVMValueRef; arg2 : LLVMVisibility);  -- Core.h:666
   pragma Import (C, LLVMSetVisibility, "LLVMSetVisibility");

   function LLVMGetAlignment (arg1 : LLVMValueRef) return unsigned;  -- Core.h:667
   pragma Import (C, LLVMGetAlignment, "LLVMGetAlignment");

   procedure LLVMSetAlignment (arg1 : LLVMValueRef; arg2 : unsigned);  -- Core.h:668
   pragma Import (C, LLVMSetAlignment, "LLVMSetAlignment");

  -- Operations on global variables
   function LLVMAddGlobal
     (arg1 : LLVMModuleRef;
      arg2 : LLVMTypeRef;
      arg3 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:671
   pragma Import (C, LLVMAddGlobal, "LLVMAddGlobal");

   function LLVMAddGlobalInAddressSpace
     (arg1 : LLVMModuleRef;
      arg2 : LLVMTypeRef;
      arg3 : Interfaces.C.Strings.chars_ptr;
      arg4 : unsigned) return LLVMValueRef;  -- Core.h:672
   pragma Import (C, LLVMAddGlobalInAddressSpace, "LLVMAddGlobalInAddressSpace");

   function LLVMGetNamedGlobal (arg1 : LLVMModuleRef; arg2 : Interfaces.C.Strings.chars_ptr) return LLVMValueRef;  -- Core.h:675
   pragma Import (C, LLVMGetNamedGlobal, "LLVMGetNamedGlobal");

   function LLVMGetFirstGlobal (arg1 : LLVMModuleRef) return LLVMValueRef;  -- Core.h:676
   pragma Import (C, LLVMGetFirstGlobal, "LLVMGetFirstGlobal");

   function LLVMGetLastGlobal (arg1 : LLVMModuleRef) return LLVMValueRef;  -- Core.h:677
   pragma Import (C, LLVMGetLastGlobal, "LLVMGetLastGlobal");
